# vitals

./: .gitignore  CLAUDE.md  README.md  STYLE_GUIDE.md  build-all.sh  fix-flatpak-deps.py  meson.build  requirements.txt
.forgejo/workflows/: publish.yml
.github/workflows/: flatpak.yml
build-aux/flatpak/: land.rob.vitals.json  python3-deps.json
data/: land.rob.vitals.desktop.in  land.rob.vitals.gschema.xml  land.rob.vitals.metainfo.xml.in  meson.build
data/schema/: record-types.yaml
data/schema/sql/: 0001_initial.sql  0002_devices.sql
data/ui/: help-overlay.blp  land.rob.vitals.gresource.xml  meson.build  window.blp
docs/: adding-a-device-plugin.md  and-oximeter.md  and-uc450.md  ihealth-bg5.md  omron-bp.md  overlapping-sources.md  reverse-engineered-protocols.md
po/: POTFILES.in  meson.build
src/vitals/: __init__.py  __main__.py  alarms.py  application.py  background_portal.py  calendar.py  const.py.in  format.py  logging_setup.py  main.py  meson.build  mpris.py  notifications.py  preferences.py  pulse_client.py  trends.py  vitals.in  window.py
src/vitals/ble/: __init__.py  bluetooth_state.py  manager.py  scan_broker.py
src/vitals/core/: __init__.py  catalog.py  csv_export.py  errors.py  events.py  migrate.py  records.py  replicate.py  resources.py  store.py  units.py
src/vitals/devices/: __init__.py  and_oximeter.py  and_uc450.py  bangle.py  bangle_dfu.py  bangle_store.py  base.py  ihealth_bg5.py  keeper.py  manager.py  omron_bp.py  pinetime.py  pinetime_dfu.py  store.py  waterh_bottle.py  weather.py  yucheng_ring.py
src/vitals/devices/pebble/: __init__.py  fw_update.py  music.py  pbw.py  pebble.py  pebble_appinstall.py  pebble_health.py  pebble_store.py  pebble_weather.py  ppogatt.py  protobuf_log.py  timeline.py
src/vitals/devices/sensors/: __init__.py  decoders.py  gatt.py  plugin.py
src/vitals/dialogs/: __init__.py  alarms_dialog.py  app_store_dialog.py  bangle_firmware_dialog.py  firmware_dialog.py  pairing.py  pbw_install_dialog.py
src/vitals/ingest/: __init__.py  builders.py  recorder.py
src/vitals/pages/: __init__.py  dashboard.py  device_detail.py  devices.py  metric_detail.py  permissions.py  timeline.py  today.py  trends.py
src/vitals/sources/: __init__.py  food.py  food_cache.py  food_lookup.py  measurements.py  usda.py  water.py
src/vitals/widgets/: __init__.py  charts.py
tests/: conftest.py  meson.build  test_alarms.py  test_and_oximeter.py  test_and_uc450.py  test_bangle.py  test_bangle_dfu.py  test_bangle_store.py  test_builders.py  test_calendar.py  test_core.py  test_csv_export.py  test_device_manager.py  test_devices_base.py  test_food_cache.py  test_food_form.py  test_food_lookup.py  test_format.py  test_fw_update.py  test_ihealth_bg5.py  test_measurements.py  test_metric_detail.py  test_migrate.py  test_music.py  test_notifications.py  test_omron_bp.py  test_packaging.py  test_pbw.py  test_pebble.py  test_pebble_appinstall.py  test_pebble_health.py  test_pebble_store.py  test_pinetime.py  test_pinetime_dfu.py  test_ppogatt.py  test_protobuf_log.py  test_recorder.py  test_sensor_decoders.py  test_sensor_plugin.py  test_time_sync.py  (+7 more)
